# ATTENDANCE-SYSTEM

./: README.md
device/: CMakeLists.txt  FaceRecognition  README.md
device/include/: TArcface.h  TRetina.h
device/src/: TArcface.cpp  TRetina.cpp  TWarp.cpp  main_comp.cpp
web/client_lab/: package-lock.json  package.json
web/client_lab/public/: index.html
web/client_lab/src/: App.css  App.js  cookies.js  firebase.js
web/client_lab/src/Layouts/: DefaultLayout.js  layout.css
web/client_lab/src/components/Adduser/: Adduser.css  Adduser.js
web/client_lab/src/components/Boxuser/: Boxuser.css  Boxuser.js
web/client_lab/src/components/Register/: Register.css  Register.js
web/client_lab/src/pages/Attendance/: Attendance.css  Attendance.js
web/client_lab/src/pages/Camera/: Camera.css  Camera.js
web/client_lab/src/pages/Home/: Home.css  Home.js
web/client_lab/src/pages/Manager/: Manage.js  Manager.css
web/client_lab/src/routes/: routes.js
web/server_lab/: esp.js  package-lock.json  package.json
web/server_lab/src/: mqtt.js  server.js
web/server_lab/src/config/: config.json
web/server_lab/src/models/: admin.js  attendance.js  user.js
web/server_lab/src/routes/: admin.js  attendance.js  middleware.js  user.js
web/server_lab/src/services/: adminService.js  attendanceService.js  userService.js
